--- a/package.json
+++ b/package.json
@@ -4,12 +4,25 @@
   "description": "",
   "main": "game.js",
   "scripts": {
-    "start": "node server.js"
+    "watch": "webpack --watch",
+    "start": "webpack-dev-server --open",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "open": "^7.0.0"
+    "open": "^7.0.0",
+    "p5": "^0.10.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/register": "^7.7.4",
+    "babel-loader": "^8.0.6",
+    "eslint": "^6.7.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
